# XPaceView

./: CMakeLists.txt  README.md  qtquickcontrols2.conf  resources.qrc
components/: Icons.qml  RoundButton.qml  qmldir
src/: backend.cpp  backend.h  logfile.cpp  logfile.h  main.cpp  vectormath.h  xpacelogview.cpp  xpaceview.cpp  xpaceview.h
views/: MainView.qml  mainView.qml
